<resources>
    <string name="app_name">Halaman Admin</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="judul">Resepin Dong!</string>
    <string name="halaman_sumatra">Resep Sumatra</string>
    <string name="halaman_jawa">Resep Jawa</string>
    <string name="halaman_kalimantan">Resep Kalimantan</string>
    <string name="halaman_sulawesi">Resep Sulawesi</string>
    <string name="halaman_papua">Resep Papua</string>
    <string name="aceh">Aceh</string>
    <string name="sumut">Sumatera Utara</string>
    <string name="riau">Riau</string>
    <string name="sumbar">Sumatera Barat</string>
    <string name="jambi">Jambi</string>
    <string name="sumsel">Sumatera Selatan</string>
    <string name="bengkulu">Bengkulu</string>
    <string name="lampung">Bandar Lampung</string>
    <string name="babel">Bangka Belitung</string>
    <string name="kepri">Kepulauan Riau</string>
    <string name="banten">Banten</string>
    <string name="jabar">Jawa Barat</string>
    <string name="jakarta"> DKI Jakarta</string>
    <string name="jateng">Jawa Tengah</string>
    <string name="yogya">Yogyakarta</string>
    <string name="jatim">Jawa Timur</string>
    <string name="bali">Bali</string>
    <string name="ntt">Nusa Tenggara Timur</string>
    <string name="ntb">Nusa Tenggara Barat</string>
    <string name="kalbar">Kalimantan Barat</string>
    <string name="kalut">Kalimantan Utara</string>
    <string name="kalsel">Kalimantan Selatan</string>
    <string name="kaltim">Kalimantan Timur</string>
    <string name="kalteng">Kalimantan Tengah</string>
    <string name="pabar">Papua Barat</string>
    <string name="papua">Papua</string>
    <string name="gorontalo">Gorontalo</string>
    <string name="sulbar">Sulawesi Barat</string>
    <string name="sulsel">Sulawesi Selatan</string>
    <string name="sulteng">Sulawesi Tengah</string>
    <string name="seltenggara">Sulawesi Tenggara</string>
    <string name="sulut">Sulawesi Utara</string>
    <string name="nama_profile">Hello Admin</string>
</resources>