<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".HalamanJawa">

    <TextView
        android:id="@+id/txtjudul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="55dp"
        android:text="@string/judul"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/banten"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_marginBottom="460dp"
        android:backgroundTint="#ffdacc"
        android:text="@string/banten"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.100"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/jakarta"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_marginBottom="460dp"
        android:backgroundTint="#ffdacc"
        android:text="@string/jakarta"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.900"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/jabar"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_marginBottom="360dp"
        android:backgroundTint="#ffdacc"
        android:text="@string/jabar"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.100"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/jateng"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_marginBottom="360dp"
        android:backgroundTint="#ffdacc"
        android:text="@string/jateng"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.900"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/jatim"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_marginBottom="260dp"
        android:backgroundTint="#ffdacc"
        android:text="@string/jatim"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.100"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/yogyakarta"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_marginBottom="260dp"
        android:backgroundTint="#ffdacc"
        android:text="@string/yogya"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.900"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ntb"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_marginBottom="160dp"
        android:backgroundTint="#ffdacc"
        android:text="@string/ntb"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.100"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ntt"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_marginBottom="160dp"
        android:backgroundTint="#ffdacc"
        android:text="@string/ntt"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.900"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bali"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="#ffdacc"
        android:text="@string/bali"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>