<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".HalamanSulawesi">

    <TextView
        android:id="@+id/txtjudul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="90dp"
        android:fontFamily="@font/bangers"
        android:text="@string/judul"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sulut"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_marginBottom="460dp"
        android:backgroundTint="#ffdacc"
        android:text="@string/sulut"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.100"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/gorontalo"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_marginBottom="460dp"
        android:backgroundTint="#ffdacc"
        android:text="@string/gorontalo"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.900"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sulteng"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_marginBottom="360dp"
        android:backgroundTint="#ffdacc"
        android:text="@string/sulteng"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.100"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sulsel"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_marginBottom="360dp"
        android:backgroundTint="#ffdacc"
        android:text="@string/sulsel"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.900"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sultenggara"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_marginBottom="260dp"
        android:backgroundTint="#ffdacc"
        android:text="@string/seltenggara"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.100"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sulbar"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_marginBottom="260dp"
        android:backgroundTint="#ffdacc"
        android:text="@string/sulbar"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.900"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>